tests/baselines/reference/computedEnumMemberSyntacticallyString2(isolatedmodules=true).errors.txt
foo.ts(11,7): error TS18055: 'Foo.F' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.
foo.ts(12,7): error TS18055: 'Foo.G' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.


==== ./foo.ts (2 errors) ====
    import { BAR } from './bar';
    const LOCAL = 'LOCAL';
    
    enum Foo {
      A = `${BAR}`,
    
      B = LOCAL,
      C = B,
      D = C + 'BAR',
    
      F = BAR,
          ~~~
!!! error TS18055: 'Foo.F' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.
      G = 2 + BAR,
          ~~~~~~~
!!! error TS18055: 'Foo.G' has a string type, but must have syntactically recognizable string syntax when 'isolatedModules' is enabled.
    
      H = A,
      I = H + BAR,
      J = H
    }
    
==== ./bar.ts (0 errors) ====
    export const BAR = 'bar';